# thesis-template

./: .gitattributes  .gitignore  README.md  dictionnary.txt  draw_evolution_plots.R  index.md  pyproject.toml  speech.org
.github/actions/compilation/: Dockerfile  action.yml  entrypoint.sh
.github/actions/rscript/: action.yml  entrypoint.sh
.github/workflows/: main.yml
