[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
cashew = { git = "https://github.com/Ezibenroc/cashew.git", rev="fdff221d3cd29c8dfc91a6c99447316a1e25bb2d" }
pycewise = "^0.1.2"
rpy2 = "^3.4.2"
piecewise = { git = "https://github.com/DataDog/piecewise.git", rev="0e3c7f50d1e9fc8a251823edab13704e368aa1d4" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
